--- a/projects/12/test/Memory.vm
+++ b/projects/12/test/Memory.vm
@@ -1,42 +1,34 @@
 function Memory.init 0
-push constant 2048
-pop static 0
 push constant 0
+pop static 0
+push constant 2048
 push static 0
 add
-push constant 16383
-push constant 2048
-sub
-push constant 1
-add
+push constant 14334
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push constant 1
+push constant 2049
 push static 0
 add
-push constant 0
+push constant 2050
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
 push constant 0
 return
-function Memory.peek 1
-push constant 0
-pop local 0
+function Memory.peek 0
 push argument 0
-push local 0
+push static 0
 add
 pop pointer 1
 push that 0
 return
-function Memory.poke 1
-push constant 0
-pop local 0
+function Memory.poke 0
 push argument 0
-push local 0
+push static 0
 add
 push argument 1
 pop temp 0
@@ -46,7 +38,17 @@ pop that 0
 push constant 0
 return
 function Memory.alloc 1
-push static 0
+push argument 0
+push constant 1
+lt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 5
+call Sys.error 1
+pop temp 0
+label IF_FALSE0
+push constant 2048
 pop local 0
 label WHILE_EXP0
 push constant 0
@@ -55,8 +57,6 @@ add
 pop pointer 1
 push that 0
 push argument 0
-push constant 3
-add
 lt
 not
 if-goto WHILE_END0
@@ -69,174 +69,211 @@ pop local 0
 goto WHILE_EXP0
 label WHILE_END0
 push local 0
+push argument 0
+add
+push constant 16379
+gt
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push constant 6
+call Sys.error 1
+pop temp 0
+label IF_FALSE1
+push constant 0
+push local 0
+add
+pop pointer 1
+push that 0
+push argument 0
+push constant 2
+add
+gt
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push argument 0
+push constant 2
+add
+push local 0
+add
+push constant 0
+push local 0
+add
+pop pointer 1
+push that 0
+push argument 0
+sub
+push constant 2
+sub
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push constant 1
+push local 0
+add
+pop pointer 1
+push that 0
+push local 0
+push constant 2
+add
+eq
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
+push argument 0
+push constant 3
+add
+push local 0
+add
+push local 0
+push argument 0
+add
+push constant 4
+add
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+goto IF_END3
+label IF_FALSE3
+push argument 0
+push constant 3
+add
+push local 0
+add
+push constant 1
+push local 0
+add
+pop pointer 1
+push that 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label IF_END3
+push constant 1
+push local 0
+add
+push local 0
+push argument 0
+add
+push constant 2
+add
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label IF_FALSE2
+push constant 0
+push local 0
+add
+push constant 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push local 0
+push constant 2
+add
+return
+function Memory.deAlloc 2
+push argument 0
+push constant 2
+sub
+pop local 0
+push constant 1
+push local 0
+add
+pop pointer 1
+push that 0
+pop local 1
+push constant 0
+push local 1
+add
+pop pointer 1
+push that 0
 push constant 0
 eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
-call Output.println 0
-pop temp 0
-push constant 35
-call String.new 1
-push constant 110
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 118
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 105
-call String.appendChar 2
-push constant 108
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 98
-call String.appendChar 2
-push constant 108
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 102
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 45
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 121
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 98
-call String.appendChar 2
-push constant 108
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 99
-call String.appendChar 2
-push constant 107
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 110
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 119
-call String.appendChar 2
-push constant 46
-call String.appendChar 2
-call Output.printString 1
-pop temp 0
-call Output.println 0
-pop temp 0
 push constant 0
-call Sys.error 1
+push local 0
+add
+push constant 1
+push local 0
+add
+pop pointer 1
+push that 0
+push local 0
+sub
+push constant 2
+sub
 pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+goto IF_END0
 label IF_FALSE0
 push constant 0
 push local 0
 add
-push constant 0
+push constant 1
 push local 0
 add
 pop pointer 1
 push that 0
-push argument 0
-push constant 1
-add
+push local 0
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
 push constant 0
-push local 0
+push local 1
 add
 pop pointer 1
 push that 0
-push local 0
-add
-push argument 0
-push constant 1
 add
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 0
-push constant 0
-push local 0
+push constant 1
+push local 1
 add
 pop pointer 1
 push that 0
-push constant 1
+push local 1
+push constant 2
 add
-add
-return
-function Memory.deAlloc 2
-push static 0
-pop local 0
-label WHILE_EXP0
-push constant 1
-push local 0
-add
-pop pointer 1
-push that 0
-push constant 0
 eq
-not
-not
-if-goto WHILE_END0
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push constant 1
 push local 0
+add
+push local 0
+push constant 2
+add
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+goto IF_END1
+label IF_FALSE1
+push constant 1
+push local 0
+add
+push constant 1
+push local 1
 add
 pop pointer 1
 push that 0
-pop local 0
-goto WHILE_EXP0
-label WHILE_END0
-push argument 0
-push constant 1
-sub
-pop local 1
-push constant 1
-push local 0
-add
-push local 1
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push constant 1
-push local 1
-add
-push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+label IF_END1
+label IF_END0
 push constant 0
 return
